--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "gulp watchSass & react-scripts start",
+    "start": "react-scripts start",
     "build": "gulp buildSass && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
